# RustApp

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mdgd/rustapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mdgd/rustapp/: ComplexNumber.java  FractalView.java  MainActivity.java
app/src/main/jniLibs/: hint.txt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mdgd/rustapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
rust-lib/: Cargo.toml  cargo-config.toml  config_example.toml
rust-lib/src/: lib.rs  main.rs
rust-lib/src/android/: fractal.rs  graphic.rs
