[package]
authors = ["DanGld <dangladste@gmail.com>"]
name = "rust-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19", default-features = false }


[lib]
name = "rust"
crate-type = ["dylib"]
